<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vesc</name>
  <version>1.0.0</version>
  <description> Metapackage of VESC packages. </description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank Corp.</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>vesc_driver</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>
  <exec_depend>vesc_hw_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
